Fixed empty space bug on smaller devices. Added 1 project

--- a/src/pages/About/About.module.sass
+++ b/src/pages/About/About.module.sass
@@ -62,7 +62,7 @@
   max-width: 300px
   margin-block: 25px
   opacity: 0
-  transform: translateX(50px)
+  // transform: translateX(50px)
   transition: transform 1s ease-out, opacity 1s ease-out
   
 //////////////////////////////////SKILLS
@@ -72,14 +72,14 @@
   line-height: 120%
   font-weight: 500
   opacity: 0
-  transform: translateX(50px)
+  // transform: translateX(50px)
   transition: transform 1s ease-out, opacity 1s ease-out
 
 .skills_description
   margin-block: 1em
   font-weight: 300
   opacity: 0
-  transform: translateX(50px)
+  // transform: translateX(50px)
   transition: transform 1s ease-out, opacity 1s ease-out
 
 .skillsList
